Adding some simulation results (will delete)

--- a/Code/EULBO/eulbo_implementation.ipynb
+++ b/Code/EULBO/eulbo_implementation.ipynb
@@ -63,6 +63,7 @@
     "import tqdm.notebook as tqdm\n",
     "import pandas as pd\n",
     "import os as oper\n",
+    "import fnmatch\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -1305,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "be185244-a3ca-4d60-8e2e-13bf31bd2e79",
    "metadata": {},
    "outputs": [],
@@ -1313,12 +1314,13 @@
     "def ELBO_simulations(\n",
     "    D: Integer, \n",
     "    N: Integer,\n",
-    "    ls: Float[Tensor, \"1 D\"],\n",
-    "    os: Float[Tensor, \"1 1\"],\n",
+    "    n_acts: Integer,\n",
+    "    truenoise: Float[Tensor, \"1 1\"],\n",
+    "    # ls: Float[Tensor, \"1 D\"],\n",
+    "    # os: Float[Tensor, \"1 1\"],\n",
     "    # sigma_sq: Float[Tensor, \"1 1\"],\n",
     "    n_simulations: Integer,\n",
     "    n_epochs: Integer,\n",
-    "    n_acts: Integer\n",
     ") -> dict:\n",
     "\n",
     "    simulation_dict = {\n",
@@ -1327,9 +1329,10 @@
     "        \"Epoch\": [], \n",
     "        \"N\":[],\n",
     "        \"Actions\": [],\n",
+    "        \"TrueNoise\": [],\n",
     "        \"LengthScale\": [],\n",
     "        \"OutputScale\": [],\n",
-    "        \"Noise\": [],\n",
+    "        \"SigmaSq\": [],\n",
     "        \"obsBest\": [],\n",
     "        \"trueBest\": []\n",
     "    }\n",
@@ -1337,12 +1340,8 @@
     "    for sim in range(n_simulations):\n",
     "        # Simulate dataset \n",
     "        X = torch.rand(N, D)\n",
-    "        y = observe(hartmann_six, X, torch.zeros(1, 1))\n",
-    "\n",
+    "        y = observe(hartmann_six, X, truenoise)\n",
     "        true_y = hartmann_six(X)\n",
-    "        \n",
-    "        # KXX = matern_kernel(X, X, ls, os) + (sigma_sq + 1e-4) * torch.eye(X.shape[-2]) # epsilon = 1e-4\n",
-    "        # K_chol = torch.linalg.cholesky(KXX)\n",
     "\n",
     "        # Record initial info for the simulation\n",
     "        simulation_dict[\"Method\"].append(\"Separate\")\n",
@@ -1350,9 +1349,10 @@
     "        simulation_dict[\"Epoch\"].append(0)\n",
     "        simulation_dict[\"N\"].append(N)\n",
     "        simulation_dict[\"Actions\"].append(n_acts)\n",
-    "        simulation_dict[\"LengthScale\"].append(ls[0, 0].item())\n",
-    "        simulation_dict[\"OutputScale\"].append(os[0, 0].item())\n",
-    "        simulation_dict[\"Noise\"].append(float(\"nan\"))\n",
+    "        simulation_dict[\"TrueNoise\"].append(truenoise.item())\n",
+    "        simulation_dict[\"LengthScale\"].append(np.nan)\n",
+    "        simulation_dict[\"OutputScale\"].append(np.nan)\n",
+    "        simulation_dict[\"SigmaSq\"].append(np.nan)\n",
     "        \n",
     "        y_best = y.max().item()\n",
     "        simulation_dict[\"obsBest\"].append(y_best)\n",
@@ -1361,22 +1361,26 @@
     "        simulation_dict[\"trueBest\"].append(true_best)\n",
     "        \n",
     "        for epoch in range(n_epochs):\n",
-    "            # Initialize S and x_new arbitrarily\n",
+    "            # Initialize S, x_new, GP hyperparameters randomly\n",
     "            S_raw = torch.randn(X.shape[0], n_acts)\n",
-    "            x_new_raw = torch.rand(1, D).logit()\n",
+    "            ls_raw = torch.randn(1, D)\n",
+    "            os_raw = torch.randn(1, 1)\n",
     "            sigma_sq_raw = torch.randn(1, 1)\n",
+    "            x_new_raw = torch.rand(1, D).logit()\n",
     "            \n",
-    "            S_opt = torch.nn.Parameter(S_raw)\n",
-    "            x_opt = torch.nn.Parameter(x_new_raw)\n",
-    "            sigma_sq_opt = torch.nn.Parameter(sigma_sq_raw)\n",
-    "            # gain_S = torch.zeros(1, requires_grad = True)\n",
-    "            # gain_x = torch.zeros(1, requires_grad = True)\n",
-    "            optimizer_S = torch.optim.Adam(params = [S_opt, sigma_sq_opt], lr = 0.005, maximize = True)\n",
-    "            optimizer_x = torch.optim.Adam(params = [x_opt], lr = 0.01, maximize = True)\n",
     "\n",
+    "            S_opt = torch.nn.Parameter(S_raw)\n",
+    "            ls_opt = torch.nn.Parameter(ls_raw)\n",
+    "            os_opt = torch.nn.Parameter(os_raw)\n",
+    "            sigma_sq_opt = torch.nn.Parameter(sigma_sq_raw)\n",
+    "            x_new_opt = torch.nn.Parameter(x_new_raw)\n",
+    "\n",
+    "            # Optimize S and GP hyperparameters \n",
+    "            optimizer_S = torch.optim.Adam(params = [S_opt, ls_opt, os_opt, sigma_sq_opt], lr = 0.005, maximize = True)\n",
     "            for _ in range(500):\n",
-    "                # Ensure S, x are \"valid\"\n",
     "                S_normed = normalize_cols(S_opt)\n",
+    "                ls = torch.nn.functional.softplus(ls_opt)\n",
+    "                os = torch.nn.functional.softplus(os_opt)\n",
     "                sigma_sq = torch.nn.functional.softplus(sigma_sq_opt)\n",
     "\n",
     "                KXX = matern_kernel(X, X, ls, os) + (sigma_sq + 1e-4) * torch.eye(X.shape[-2]) # epsilon = 1e-4\n",
@@ -1394,7 +1398,7 @@
     "                optimizer_S.step()\n",
     "                optimizer_S.zero_grad()\n",
     "                \n",
-    "            S_normed = normalize_cols(S_opt).detach()\n",
+    "            S_normed = normalize_cols(S_opt).detach()          \n",
     "            STKS = S_normed.mT @ KXX @ S_normed\n",
     "            try:\n",
     "                STKS_chol = torch.linalg.cholesky(STKS)\n",
@@ -1404,11 +1408,14 @@
     "                except:\n",
     "                    break \n",
     "            STKS_chol.detach_()\n",
+    "            ls.detach_()\n",
+    "            os.detach_()\n",
     "            sigma_sq.detach_()\n",
-    "            \n",
+    "\n",
+    "            optimizer_x = torch.optim.Adam(params = [x_new_opt], lr = 0.01, maximize = True)\n",
     "            for _ in range(500):\n",
     "                # Ensure S, x are \"valid\"\n",
-    "                x_normed = x_opt.sigmoid()  \n",
+    "                x_normed = x_new_opt.sigmoid()  \n",
     "                \n",
     "                # Compute the variational inference distribution q_S(f) = f|(S'D) at x_normed\n",
     "                VI_mean, VI_var = compute_posterior_mean_and_variance_action(x_normed, X, y, S_normed, STKS_chol, ls, os)\n",
@@ -1422,10 +1429,10 @@
     "                optimizer_x.zero_grad()\n",
     "    \n",
     "            # Update data  \n",
-    "            x_new = x_opt.sigmoid()       \n",
+    "            x_new = x_new_opt.sigmoid()       \n",
     "            x_new.detach_()\n",
     "            # K_chol = update_chol_newdata(K_chol, X, x_new, ls, os, sigma_sq)\n",
-    "            y_new = observe(hartmann_six, x_new, sigma_sq)\n",
+    "            y_new = observe(hartmann_six, x_new, truenoise)\n",
     "            X = torch.cat([X, x_new], -2)\n",
     "            y = torch.cat([y, y_new], -1)\n",
     "\n",
@@ -1435,14 +1442,15 @@
     "            simulation_dict[\"Epoch\"].append(epoch + 1)\n",
     "            simulation_dict[\"N\"].append(N)\n",
     "            simulation_dict[\"Actions\"].append(n_acts)\n",
-    "            simulation_dict[\"Noise\"].append(sigma_sq.item())\n",
-    "            simulation_dict[\"LengthScale\"].append(ls[0, 0].item())\n",
-    "            simulation_dict[\"OutputScale\"].append(os[0, 0].item())\n",
-    "\n",
+    "            simulation_dict[\"TrueNoise\"].append(truenoise.item())\n",
+    "            simulation_dict[\"LengthScale\"].append(ls.tolist())\n",
+    "            simulation_dict[\"OutputScale\"].append(os.item())\n",
+    "            simulation_dict[\"SigmaSq\"].append(sigma_sq.item())\n",
+    "        \n",
     "            y_best = y.max().item()\n",
     "            simulation_dict[\"obsBest\"].append(y_best)\n",
-    "\n",
-    "            true_best = max(true_best, hartmann_six(x_new).item())\n",
+    "    \n",
+    "            true_best = true_y[y.argmax()].item()\n",
     "            simulation_dict[\"trueBest\"].append(true_best)\n",
     "\n",
     "        # Print progress update\n",
@@ -1453,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "d55d5931-cf1d-44a8-aba1-af4c30dbc90b",
    "metadata": {},
    "outputs": [
@@ -1462,18 +1470,20 @@
      "output_type": "stream",
      "text": [
       "Initial sample size (N):  100\n",
-      "Length scale (ls):  1\n",
-      "Output scale (os):  1\n",
-      "Number of simulations (n_simulations):  1\n",
-      "Number of epochs (n_epochs):  5\n",
-      "Number of selected actions (n_acts):  10\n"
+      "Number of selected actions (n_acts):  10\n",
+      "Number of simulations (n_simulations):  5\n",
+      "Number of epochs (n_epochs):  10\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed 5 epochs for simulation 1!\n"
+      "Completed 10 epochs for simulation 1!\n",
+      "Completed 10 epochs for simulation 2!\n",
+      "Completed 10 epochs for simulation 3!\n",
+      "Completed 10 epochs for simulation 4!\n",
+      "Completed 10 epochs for simulation 5!\n"
      ]
     }
    ],
@@ -1481,31 +1491,42 @@
     "# Get user input (I haven't done nice implementation with Fire yet)\n",
     "D = 6\n",
     "N = int(input(\"Initial sample size (N): \"))\n",
-    "ls = float(input(\"Length scale (ls): \")) * torch.ones(1, D)\n",
-    "# ls = torch.tensor(list(map(float, input(\"Length scale (ls): \").split(\",\"))))\n",
-    "os = float(input(\"Output scale (os): \")) * torch.ones(1, 1)\n",
+    "# ls = float(input(\"Length scale (ls): \")) * torch.ones(1, D)\n",
+    "# os = float(input(\"Output scale (os): \")) * torch.ones(1, 1)\n",
     "# sigma_sq = float(input(\"Noise (sigma_sq): \")) * torch.ones(1, 1)\n",
+    "truenoise = torch.zeros(1,1)\n",
+    "n_acts = int(input(\"Number of selected actions (n_acts): \"))\n",
     "n_simulations = int(input(\"Number of simulations (n_simulations): \"))\n",
     "n_epochs = int(input(\"Number of epochs (n_epochs): \"))\n",
-    "n_acts = int(input(\"Number of selected actions (n_acts): \"))\n",
     "\n",
     "# Run simulations\n",
-    "simulation_dict = ELBO_simulations(D, N, ls, os, n_simulations, n_epochs, n_acts)\n",
+    "simulation_dict = ELBO_simulations(D, N, n_acts, truenoise, n_simulations, n_epochs)\n",
     "sim_df = pd.DataFrame(simulation_dict)\n",
     "\n",
-    "# Count existing number of files\n",
-    "n_files = len(oper.listdir('./Sim-Results/20240702/'))\n",
+    "# Count existing number of csv files\n",
+    "n_files = len(fnmatch.filter(oper.listdir('./Sim-Results/20240704/'), '*.csv'))\n",
     "\n",
     "# Save file locally\n",
-    "sim_df.to_csv(f\"./Sim-Results/20240702/Separate_Simulation_Results_{n_files}.csv\", index = False)"
+    "sim_df.to_csv(f\"./Sim-Results/20240704/Separate_Simulation_Results_{n_files}.csv\", index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "80476fd9-9296-4e66-811d-2626a43e3a9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
