--- a/Notes/Variational-Inference-Notes.tex
+++ b/Notes/Variational-Inference-Notes.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{article}
-\input{macros/math-alphabets.tex}
-\input{macros/math-macros.tex}
-\input{macros/typesetting-macros.tex}
+\input{tex-macros/math-alphabets.tex}
+\input{tex-macros/math-macros.tex}
+\input{tex-macros/typesetting-macros.tex}
 \usepackage{parskip}
 \usepackage{scalefnt}
 \usepackage{caption,subcaption}
