Adding pifont to typesetting macros

--- a/Notes/tex-macros/typesetting-macros.tex
+++ b/Notes/tex-macros/typesetting-macros.tex
@@ -2,6 +2,7 @@
 \usepackage{multirow, makeidx}
 \usepackage{mathtools}
 \usepackage{enumerate, enumitem}
+\usepackage{pifont}
 
 \usepackage[ruled, linesnumbered]{algorithm2e}
 \SetKwRepeat{Repeat}{repeat}{until} 
