Edited variance macro

--- a/Notes/tex-macros/math-macros.tex
+++ b/Notes/tex-macros/math-macros.tex
@@ -16,7 +16,7 @@
 % statistics terminology
 \newcommand{\expec}[2][]{\bbE_{#1}\left[#2\right]} 
 \newcommand{\prob}[2][]{\bbP_{#1}(#2)}
-\newcommand{\var}[2][]{\text{Var}_{#1}[#2]}
+\newcommand{\var}[2][]{\text{Var}_{#1}\left[#2\right]}
 \newcommand{\bias}[1]{\textbf{bias}(#1)}
 \newcommand{\stderror}[1]{\textbf{se}(#1)}
 \newcommand{\MSE}[1]{\text{MSE}(#1)}
