--- a/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
+++ b/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
@@ -25,18 +25,22 @@
 
 \newcommand{\bs}[1]{\boldsymbol{#1}}
 \def\bsx{\bs{x}}
+\def\bsy{\bs{y}}
+\def\bsk{\bs{k}}
 \def\bell{\bs{\ell}}
-\def\xnext{\bsx_{\textrm{next}}}
+% \def\xnext{\bsx_{\textrm{next}}}
 \def\xast{\bsx_{*}}
-\def\rhoast{\bs{\rho}_{*}}
+% \def\rhoast{\bs{\rho}_{*}}
 
-\usepackage{xparse}
-\NewDocumentCommand{\xinc}{o}{%
-  \bsx_{\textrm{inc}\IfValueT{#1}{,{#1}}}
-}
-\NewDocumentCommand{\yinc}{o}{%
-  y_{\textrm{inc}\IfValueT{#1}{,{#1}}}
-}
+% \usepackage{xparse}
+% \NewDocumentCommand{\xinc}{o}{%
+%   \bsx_{\textrm{inc}\IfValueT{#1}{,{#1}}}
+% }
+% \NewDocumentCommand{\yinc}{o}{%
+%   y_{\textrm{inc}\IfValueT{#1}{,{#1}}}
+% }
+\usepackage{tikz}
+\usetikzlibrary {angles,quotes}
 
 
 \begin{document}
@@ -85,4 +89,78 @@ In the analysis of this algorithm, we make the following assumptions:
   \item At each iteration $t$ of the algorithm, $y_{0} \ge y_{1}$. This can be done without loss of generality by relabelling as needed.
 \end{itemize}
 
+\newpage
+
+\section{Maximizing \EI}
+
+Let $\calD_{t} = (\mathbf{X}, \mathbf{y})$ be the dataset of two observations at time $t$. For ease of notation, we let $\bsk_{01} = k_{\bell}(\bsx_{0}, \bsx_{1})$, $\bsk_{0*} = k_{\bell}(\xast, \bsx_{0})$, and $\bsk_{1*} = k_{\bell}(\xast, \bsx_{1})$. Note that these are all scalar values. Under the assumptions outlined above, for all $\xast \in \calX$, we have the following:
+\begin{align*}
+\expec{f(\xast) \mid \mathbf{X}, \mathbf{y}} &= \mu_{f}(\xast) + k_{\bell}(\xast, \mathbf{X})k_{\bell}(\mathbf{X}, \mathbf{X})^{-1}(\mathbf{y} - \mu_{f}(\mathbf{X}))\\
+&= 0 + \begin{pmatrix}\bsk_{0*} & \bsk_{1*}\end{pmatrix}\begin{pmatrix}1 & \bsk_{01}\\ \bsk_{01} & 1\end{pmatrix}^{-1}\begin{pmatrix}\bsy_0 - 0\\ \bsy_{1} - 0\end{pmatrix}\\
+&= \frac{1}{1 - \bsk_{01}^2}\begin{pmatrix}\bsk_{0*} & \bsk_{1*}\end{pmatrix}\begin{pmatrix}1 & -\bsk_{01}\\ -\bsk_{01} & 1\end{pmatrix}\begin{pmatrix}\bsy_0\\ \bsy_{1}\end{pmatrix}\\
+&= \frac{1}{1 - \bsk_{01}^2}\left[\bsk_{0*}\left(\bsy_{0} - \bsk_{01}\bsy_{1}\right) + \bsk_{1*}\left(\bsy_{1} - \bsk_{01}\bsy_{0}\right)\right]\\
+\var{f(\xast) \mid \mathbf{X}, \mathbf{y}} &= \sigma_{f}^{2} - k_{\bell}(\xast, \mathbf{X})k_{\bell}(\mathbf{X}, \mathbf{X})^{-1}k_{\bell}(\mathbf{X}, \xast)\\
+&= 1 - \begin{pmatrix}\bsk_{0*} & \bsk_{1*}\end{pmatrix}\begin{pmatrix}1 & \bsk_{01}\\ \bsk_{01} & 1\end{pmatrix}^{-1}\begin{pmatrix}\bsk_{0*}\\ \bsk_{1*}\end{pmatrix}\\
+&= 1 - \frac{1}{1 - \bsk_{01}^{2}}\begin{pmatrix}\bsk_{0*} & \bsk_{1*}\end{pmatrix}\begin{pmatrix}1 & -\bsk_{01}\\ -\bsk_{01} & 1\end{pmatrix}\begin{pmatrix}\bsk_{0*}\\ \bsk_{1*}\end{pmatrix}\\
+&= 1 - \frac{1}{1 - \bsk_{01}^{2}}\left[\bsk_{0*}^{2} - 2\bsk_{01}\bsk_{0*}\bsk_{1*} + \bsk_{1*}^{2}\right]% \\
+% &= 1 - \frac{1}{1 - \bsk_{01}^{2}}\left[\left(\bsk_{0*}^{2} - 2\bsk_{0*}\bsk_{1*} + \bsk_{1*}^{2}\right)+ 2(1-\bsk_{01})\bsk_{0*}\bsk_{1*}\right]\\
+% &= 1 - \frac{2\bsk_{0*}\bsk_{1*}}{1 + \bsk_{01}} - \frac{(\bsk_{0*} - \bsk_{1*})^2}{1 - \bsk_{01}^{2}}
+\end{align*}
+Unfortunately, even with only 2 observations, it is difficult to get a `nice' closed-form expression for $\var{f(\xast) \mid \mathbf{X}, \mathbf{y}}$, and computing the square root of this value is no better. 
+
+For $\xast \in \calX$, define $\mu_{\textrm{post}}(\xast) = \expec{f(\xast) \mid \mathbf{X}, \mathbf{y}}$, and $\sigma_{\textrm{post}}(\xast) = \sqrt{\var{f(\xast) \mid \mathbf{X}, \mathbf{y}}}$, and define $Z(\xast) = \frac{\mu_{\textrm{post}}(\xast) - \bsy_{0}}{\sigma_{post}(\xast)}$. 
+
+By definition, $\EI(\xast \mid \mathbf{X}, \mathbf{y}) = \expec{\max\left(0, f(\xast) - \bsy_{0}\right) \mid \mathbf{X}, \mathbf{y}}$. We know that this can be simplified to 
+\begin{align*}
+\EI(\xast \mid \mathbf{X}, \mathbf{y}) &= \left(\mu_{\textrm{post}}(\xast) - \bsy_{0}\right)\Phi\left(\frac{\mu_{\textrm{post}}(\xast) - \bsy_{0}}{\sigma_{\textrm{post}}(\xast)}\right) + \sigma_{\textrm{post}}(\xast)\phi\left(\frac{\mu_{\textrm{post}}(\xast) - \bsy_{0}}{\sigma_{\textrm{post}}(\xast)}\right)\\
+& = Z(\xast)\sigma(\xast)\Phi(Z(\xast)) + \sigma(\xast)\phi(Z(\xast))
+\end{align*}
+
+% \section{Algorithm Pseudocode}
+% \begin{algorithm}
+% \caption{General idea for the proposed `forgetful' \BayesOpt{} algorithm}\label{alg:algo-1}
+% \SetKwComment{Comment}{/* }{ */}
+% \KwData{$\calD_{0} = \left\{\left(\bsx_{0}, y_{0} = \fstar(\bsx_{0})\right), \left(\bsx_{1}, y_{1} = \fstar(\bsx_{1})\right)\right\}$}
+% \KwResult{$\arg\max_{x \in \calX}\fstar(x)$}
+% \While{$N \neq 0$}{
+%   \eIf{$N$ is even}{
+%     $X \gets X \times X$\;
+%     $N \gets \frac{N}{2}$\;
+%   }{\If{$N$ is odd}{
+%     $y \gets y \times X$\;
+%     $N \gets N - 1$\;
+%     }
+%   }
+% }  
+% \end{algorithm}
+
+\newpage
+
+\section{Posterior Variance Revisited}
+Above, we demonstrated that for any given $\xast \in \calX$, $\var{f(\xast) \mid \mathbf{X}, \mathbf{y}} = 1 - \frac{1}{1 - \bsk_{01}^{2}}\left[\bsk_{0*}^{2} - 2\bsk_{01}\bsk_{0*}\bsk_{1*} + \bsk_{1*}^{2}\right]$ when the dataset $\calD_{t} = (\mathbf{X}, \mathbf{y})$ contains exactly 2 observations. This expression is difficult to work with.
+
+Note that $0 \le \bsk_{01}, \bsk_{0*}, \bsk_{1*} \le 1$ as these are all `scaled' kernels. Consider a triangle with two sides whose lengths are $\bsk_{0*}$ and $\bsk_{1*}$, as shown in the picture below, and suppose that $\cos(A) = \bsk_{01}$.
+
+\vspace*{1.0cm}
+\begin{center}
+\begin{tikzpicture}[scale=8]
+  \coordinate (a) at (0,0);
+  \coordinate (b) at (1,0);
+  \coordinate (c) at (36:1cm);
+
+  \draw 
+    (a) -- (b) node[midway, below]{$\bsk_{0*}$}
+    (b) -- (c) node[midway, right]{$a$}
+    (c) -- (a) node[midway, above left]{$\bsk_{1*}$} -- cycle;
+    \pic[draw=green!50!black, fill=green!20, angle radius=15mm, "$A$"]{angle=b--a--c};
+\end{tikzpicture}
+\end{center}
+
+By the Law of Cosines, $a^2 = \bsk_{0*}^2 + \bsk_{1*}^{2} - 2\bsk_{0*}\bsk_{1*}\cos(A) = \bsk_{0*}^2 + \bsk_{1*}^{2} - 2\bsk_{0*}\bsk_{1*}\bsk_{01}$. Additionally, $\frac{1}{1 - \bsk_{01}^{2}} = \frac{1}{1 - \cos^{2}(A)} = \frac{1}{\sin^{2}(A)}$. Thus, in terms of the triangle above, $\var{f(\xast) \mid \mathbf{X}, \mathbf{y}} = 1 - \frac{a^2}{\sin^2(A)}$.
+
+Recall that $\bsk_{01}$ is fixed with respect to the choice of $\xast$. Since the angle $A$ depends only on $\bsk_{01}$, this angle is fixed with respect to $\xast$. However, the side lengths of this triangle are dependent on $\xast$, as $\bsk_{0*}$ and $\bsk_{1*}$ are functions of $\xast$. 
+
+\noindent\rule{\textwidth}{0.8pt}
+
+Not sure where to go from here... I was hoping to find some way to simplify the value of the posterior variance and posterior standard deviation to try and find the global optimum for \EI.
 \end{document}
