--- a/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
+++ b/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
@@ -51,6 +51,7 @@
 This document contains mathematical derivations for an altered version of a \BayesOpt{} algorithm in which the dataset only ever has two recorded values, with additional values `thrown out' at each iteration of the algorithm.
 
 Part of the reason for creating this algorithm is to mathematically determine whether the algorithm proposed in \href{https://arxiv.org/abs/2402.02229}{\textit{Vanilla Bayesian Optimization Performs Great in High Dimensions}} is primarily (from a conceptual standpoint) just performing local Bayesian optimization in a high-dimensional space.
+
 \noindent\rule{\textwidth}{0.8pt}
 
 \section{Theoretical Setup}
@@ -119,12 +120,13 @@ From above, we have that $\mu_{\textrm{post}}(\xast) = \frac{1}{1 - \bsk_{01}^2}
 
 Based on this, we can also write \EI{} as a function of $\bsk_{0*}$ and $\bsk_{1*}$, i.e. $$\EI(\bsk_{0*}, \bsk_{1*}) = \left(\mu_{\textrm{post}}(\bsk_{0*}, \bsk_{1*}) - \bsy_{0}\right)\Phi\left(\frac{\mu_{\textrm{post}}(\bsk_{0*}, \bsk_{1*}) - \bsy_{0}}{\sigma_{\textrm{post}}(\bsk_{0*}, \bsk_{1*})}\right) + \sigma_{\textrm{post}}(\bsk_{0*}, \bsk_{1*})\phi\left(\frac{\mu_{\textrm{post}}(\bsk_{0*}, \bsk_{1*}) - \bsy_{0}}{\sigma_{\textrm{post}}(\bsk_{0*}, \bsk_{1*})}\right)$$ and we can maximize \EI{} with respect to the kernels $\bsk_{0*}, \bsk_{1*}$.
 
+{\footnotesize
 \begin{align*}
 \frac{\partial \EI}{\partial \bsk_{0*}} &= \left(\frac{\partial \EI}{\partial \mu_{\textrm{post}}}\right)\left(\frac{\partial \mu_{\textrm{post}}}{\partial \bsk_{0*}}\right) + \left(\frac{\partial \EI}{\partial \sigma_{\textrm{post}}}\right)\left(\frac{\partial \sigma_{\textrm{post}}}{\partial \bsk_{0*}}\right) \tag{Multivariate Chain Rule}\\
-&= \left(\frac{\partial \EI}{\partial \mu_{\textrm{post}}}\right)\left(\frac{\bsy_{0} - \bsk_{01}\bsy_{1}}{1 - \bsk_{01}^2}\right) + \left(\frac{\partial \EI}{\partial \sigma_{\textrm{post}}}\right)\left(\frac{\partial \sigma_{\textrm{post}}}{\partial \bsk_{0*}}\right)\\
+&= \left[\Phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right) + \left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right) + \phi'\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\right]\left(\frac{\bsy_{0} - \bsk_{01}\bsy_{1}}{1 - \bsk_{01}^2}\right) +\\
+&\quad \left[\left(1 - \left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)^{2}\right)\phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right) - \left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\phi'\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\right]\left(\frac{\bsk_{01}\bsk_{1*} - \bsk_{0*}}{\left(1 - \bsk_{01}^{2}\right)\sigma_{\textrm{post}}}\right)
 \end{align*}
-
-
+}%
 
 %%% Additional slightly irrelevant notes below %%%
 \newpage 
