Finishing first partial of EI

--- a/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
+++ b/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
@@ -125,6 +125,12 @@ Based on this, we can also write \EI{} as a function of $\bsk_{0*}$ and $\bsk_{1
 \frac{\partial \EI}{\partial \bsk_{0*}} &= \left(\frac{\partial \EI}{\partial \mu_{\textrm{post}}}\right)\left(\frac{\partial \mu_{\textrm{post}}}{\partial \bsk_{0*}}\right) + \left(\frac{\partial \EI}{\partial \sigma_{\textrm{post}}}\right)\left(\frac{\partial \sigma_{\textrm{post}}}{\partial \bsk_{0*}}\right) \tag{Multivariate Chain Rule}\\
 &= \left[\Phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right) + \left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right) + \phi'\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\right]\left(\frac{\bsy_{0} - \bsk_{01}\bsy_{1}}{1 - \bsk_{01}^2}\right) +\\
 &\quad \left[\left(1 - \left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)^{2}\right)\phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right) - \left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\phi'\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\right]\left(\frac{\bsk_{01}\bsk_{1*} - \bsk_{0*}}{\left(1 - \bsk_{01}^{2}\right)\sigma_{\textrm{post}}}\right)
+\intertext{Substituting $Z(\bsk_{0*}, \bsk_{1*}) = \frac{\mu_{\textrm{post}}(\bsk_{0*}, \bsk_{1*}) - \bsy_{0}}{\sigma_{\textrm{post}}(\bsk_{0*}, \bsk_{1*})}$ yields the following:}
+\frac{\partial \EI}{\partial \bsk_{0*}} &= \left[\Phi(Z) + Z\phi(Z) + \phi'(Z)\right]\left(\frac{\bsy_{0} - \bsk_{01}\bsy_{1}}{1 - \bsk_{01}^2}\right) + \left[\left(1 - Z^2\right)\phi(Z) - Z\phi'(Z)\right]\left(\frac{\bsk_{01}\bsk_{1*} - \bsk_{0*}}{\left(1 - \bsk_{01}^{2}\right)\sigma_{\textrm{post}}}\right)
+\intertext{Note that $\phi(z) = (2\pi)^{-0.5}\exp(-z^2/2)$. Taking a derivative yields that $\phi'(z) = -z\phi(z)$, or equivalently, $z\phi(z) + \phi'(z) = 0$.}
+\frac{\partial \EI}{\partial \bsk_{0*}} &= \Phi\left(Z\right)\left(\frac{\bsy_{0} - \bsk_{01}\bsy_{1}}{1 - \bsk_{01}^2}\right) + \phi\left(Z\right)\left(\frac{\bsk_{01}\bsk_{1*} - \bsk_{0*}}{\left(1 - \bsk_{01}^{2}\right)\sigma_{\textrm{post}}}\right)\\
+\frac{\partial \EI}{\partial \bsk_{0*}} &\propto \Phi\left(Z\right)\left(\bsy_{0} - \bsk_{01}\bsy_{1}\right) + \phi\left(Z\right)\left(\frac{\bsk_{01}\bsk_{1*} - \bsk_{0*}}{\sigma_{\textrm{post}}}\right)\tag{Since $\bsk_{01}$ is constant}\\
+&= \Phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\left(\bsy_{0} - \bsk_{01}\bsy_{1}\right) + \phi\left(\frac{\mu_{\textrm{post}} - \bsy_{0}}{\sigma_{\textrm{post}}}\right)\left(\frac{\bsk_{01}\bsk_{1*} - \bsk_{0*}}{\sigma_{\textrm{post}}}\right)\tag{Undoing the substitution}\\
 \end{align*}
 }%
 
