Adding an additional note

--- a/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
+++ b/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
@@ -148,6 +148,8 @@ Based on this, we can also write \EI{} as a function of $\bsk_{0*}$ and $\bsk_{1
 \end{align*}
 }%
 
+To solve the system of equations $\frac{\partial}{\partial \bsk_{0*}}\EI(\bsk_{0*}, \bsk_{1*}) = \frac{\partial}{\partial \bsk_{1*}}\EI(\bsk_{0*}, \bsk_{1*}) = 0$, we need to solve two equations of the form $a\Phi(z) + b\phi(z) = 0$, or equivalently, $\frac{\phi(z)}{\Phi(z)} = -\frac{a}{b}$. Based on a plot on Desmos, it seems that there is a unique $z\in\bbR$ solving $\frac{\phi(z)}{\Phi(z)} = C$ for any $C \in \bbR^{+}$. 
+
 %%% Additional slightly irrelevant notes below %%%
 \newpage 
 
