--- a/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
+++ b/Vanilla-HighDim/Notes/Research-Notes/Vanilla-Local-2.tex
@@ -148,7 +148,15 @@ Based on this, we can also write \EI{} as a function of $\bsk_{0*}$ and $\bsk_{1
 \end{align*}
 }%
 
-To solve the system of equations $\frac{\partial}{\partial \bsk_{0*}}\EI(\bsk_{0*}, \bsk_{1*}) = \frac{\partial}{\partial \bsk_{1*}}\EI(\bsk_{0*}, \bsk_{1*}) = 0$, we need to solve two equations of the form $a\Phi(z) + b\phi(z) = 0$, or equivalently, $\frac{\phi(z)}{\Phi(z)} = -\frac{a}{b}$. Based on a plot on Desmos, it seems that there is a unique $z\in\bbR$ solving $\frac{\phi(z)}{\Phi(z)} = C$ for any $C \in \bbR^{+}$. 
+\newpage 
+
+\section{Conditions for \EI{} Maximization}
+
+To solve the system of equations $\frac{\partial}{\partial \bsk_{0*}}\EI(\bsk_{0*}, \bsk_{1*}) = \frac{\partial}{\partial \bsk_{1*}}\EI(\bsk_{0*}, \bsk_{1*}) = 0$, we need to solve two equations of the form $a\Phi(z) + b\phi(z) = 0$, or equivalently, $\frac{\phi(z)}{\Phi(z)} = -\frac{a}{b}$.
+
+\textbf{Lemma:} For any $c_0 > 0, c_1 > 0$, there exists $z \in \bbR$ such that $c_{0}\Phi(z) - c_{1}\phi(z) = 0$. 
+
+\textbf{Proof of Lemma:} The equation above is equivalent to 
 
 %%% Additional slightly irrelevant notes below %%%
 \newpage 
@@ -159,6 +167,8 @@ Since $k_{\bell}$ is a radial kernel, it depends only on the distance between po
 
 Applying the Triangle Inequality yields $\bsd_{0*} \le \bsd_{01} + \bsd_{1*}$. Thus, $\exp(-\bsd_{0*}) \ge \exp\left(-\left(\bsd_{01} + \bsd_{1*}\right)\right) = \exp(-\bsd_{01})\exp(-\bsd_{1*})$. Thus, when the kernel $k_{\bell}$ is a \Matern(1/2) kernel, we have that $\bsk_{0*} \ge \bsk_{01}\bsk_{1*}$.
 \noindent\rule{\textwidth}{0.8pt}
+
+\newpage
 
 \section{Posterior Variance Revisited}
 Above, we demonstrated that for any given $\xast \in \calX$, $\var{f(\xast) \mid \mathbf{X}, \mathbf{y}} = 1 - \frac{1}{1 - \bsk_{01}^{2}}\left[\bsk_{0*}^{2} - 2\bsk_{01}\bsk_{0*}\bsk_{1*} + \bsk_{1*}^{2}\right]$ when the dataset $\calD_{t} = (\mathbf{X}, \mathbf{y})$ contains exactly 2 observations. This expression is difficult to work with.
